--- a/.github/ISSUE_TEMPLATE/add_bioeco_metadata.yml
+++ b/.github/ISSUE_TEMPLATE/add_bioeco_metadata.yml
@@ -1,34 +1,34 @@
-name: Contribute to the CEFI resource list
-description: The form is designed for user to easily contribute to the CEFI resource
-  list that will be used in the CEFI resource search portal
-title: '[Add new CEFI resource]: '
+name: Contribute BioEco metadata
+description: This form is designed for users to easily record, document, and update metdata about BioEco ocean observing projects.
+Metadata recorded here will flow to the GOOS BioEco Portal and ODIS.
+title: '[Add new BioEco metadata record]: '
 assignees:
-- chiaweh2
+- EliLawrence
 body:
 - type: markdown
   attributes:
-    value: Thanks for taking the time to contribute to the CEFI resource list!
+    value: Thanks for taking the time to contribute your BioEco metadata. Your contributions help enhance our global understanding of ocean observations.
 - type: input
-  id: data-title
+  id: project-name
   attributes:
-    label: What is the best title for the data/resource?
-    description: A title that best summarize the content.
-    placeholder: Global Marine Heatwaves Forecast and Observation
+    label: What is the name of the project or institution that will generate BioEco data?
+    description: A name or title that best summarizes the project.
+    placeholder: BioEcoOcean
   validations:
     required: true
 - type: input
-  id: data-url
+  id: project-url
   attributes:
-    label: What is URL that links to data/resource?
-    description: A complete URL that lead to the data/resource
-    placeholder: https://psl.noaa.gov/marine-heatwaves/
+    label: What is URL that links to project?
+    description: A complete URL that leads to a page describing the project
+    placeholder: https://bioecoocean.org/
   validations:
     required: true
 - type: input
   id: contact
   attributes:
     label: Contact Details
-    description: How can we get in touch with you if we need more info?
+    description: How can someone get in touch with you if more info is needed?
     placeholder: ex. email@example.com
   validations:
     required: false
@@ -107,7 +107,7 @@ body:
 - type: dropdown
   id: cvar
   attributes:
-    label: Variables
+    label: Which variables does this project aim to measure? Select all that apply.
     multiple: true
     options:
     - 0-Any
@@ -218,7 +218,7 @@ body:
 - type: dropdown
   id: cplatforms
   attributes:
-    label: Observing Platforms
+    label: What types of Observing Platforms will be used in the project? Select all that apply.
     multiple: true
     options:
     - 0-Any
@@ -242,7 +242,7 @@ body:
 - type: dropdown
   id: cregions
   attributes:
-    label: Regions
+    label: Which regions will be sampled during the project? Select all that apply.
     multiple: true
     options:
     - 0-Any
