--- a/.github/ISSUE_TEMPLATE/add_bioeco_metadata.yml
+++ b/.github/ISSUE_TEMPLATE/add_bioeco_metadata.yml
@@ -301,7 +301,7 @@ body:
   validations:
     required: true
 - type: input
-  id: sops_pre
+  id: sops_post
   attributes:
     label: Standard Operating Procedures (SOPs)
     description: Please describe and link to SOPs that will be used to measure the EOVs. 
@@ -313,7 +313,7 @@ body:
     label: Start Date of Temporal Coverage.
     description: "Enter the start date of the project's temporal coverage (YYYY-MM-DD)"
     placeholder: "YYYY-MM-DD"
-    validation:
+    validations:
       required: false
       regex: "^(\\d{4})-(\\d{2})-(\\d{2})$"
       error: "Please enter the date in the format YYYY-MM-DD"
@@ -323,7 +323,7 @@ body:
     label: End Date of Temporal Coverage
     description: "Enter the end date of the project's temporal coverage (YYYY-MM-DD)"
     placeholder: "YYYY-MM-DD"
-    validation:
+    validations:
       required: false
       regex: "^(\\d{4})-(\\d{2})-(\\d{2})$"
       error: "Please enter the date in the format YYYY-MM-DD"
