--- a/.github/workflows/gha_generate_pr.yml
+++ b/.github/workflows/gha_generate_pr.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   auto_new_resource_add_pr:
-    if: contains(github.event.issue.labels.*.name, 'auto pr')
+    if: github.event.issue.labels.*.name == 'auto pr'
     runs-on: ubuntu-latest
     steps:
       - name: Check Out Repository
