--- a/.github/workflows/gha_generate_pr.yml
+++ b/.github/workflows/gha_generate_pr.yml
@@ -3,11 +3,10 @@ on:
   issues:
     types: 
       - labeled
-  workflow_dispatch:
 
 jobs:
   auto_new_resource_add_pr:
-    if: contains(github.event.issue.labels.*.name, "auto pr")
+    if: contains(github.event.issue.labels.*.name, 'auto pr')
     runs-on: ubuntu-latest
     steps:
       - name: Check Out Repository
